--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "name": "react-onboard",
-  "version": "4.0.3",
+  "version": "1.0.0",
   "description": "My webpack project",
   "main": "dist/index.js",
   "scripts": {
-    "compile": "npx babel src --out-dir dist",
-    "compileJSX": "npx babel src/components --out-dir dist/components",
-    "npmPub": "npm run build && npm publish",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -16,31 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
-    "@webpack-cli/generators": "^3.0.7",
+    "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "es6-promise": "^4.2.8",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
-    "webpack-cli": "^5.1.4",
-    "whatwg-fetch": "^3.6.17"
+    "webpack": "^5.46.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-react": "^7.22.5",
-    "babel-polyfill": "^6.26.0",
-    "core-js": "^3.31.1",
-    "i": "^0.3.7",
-    "npm": "^9.8.1",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "stream": "^0.0.2",
-    "webpack": "^5.46.0"
+    "react": "^18.2.0"
   }
 }
