--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-onboard",
+  "name": "onboarder",
   "version": "20.1.1",
   "description": "My webpack project",
   "main": "dist/index.js",
